--- a/build.gradle
+++ b/build.gradle
@@ -39,13 +39,18 @@ sourceSets {
    main {
       java {
          srcDir 'src'
+         srcDir 'generated/javacc'
+         srcDir 'generated/jjtree'
       }
    }
 	
    test {
       java {
          srcDir 'test'
-      }
+      }  
+      resources {
+		   srcDir 'test'
+	   }
    }
     
 }
